[gd_scene load_steps=10 format=2]

[ext_resource path="res://sound.gd" type="Script" id=1]
[ext_resource path="res://music/media.io_gamesound.wav" type="AudioStream" id=2]
[ext_resource path="res://music/media.io_eatsound.wav" type="AudioStream" id=3]
[ext_resource path="res://music/media.io_waterbubblessound.wav" type="AudioStream" id=4]
[ext_resource path="res://music/JellyFish.wav" type="AudioStream" id=5]
[ext_resource path="res://music/media.io_gameoversound.wav" type="AudioStream" id=6]
[ext_resource path="res://music/media.io_changsencesound2.wav" type="AudioStream" id=7]
[ext_resource path="res://music/mousesound.wav" type="AudioStream" id=8]
[ext_resource path="res://music/media.io_funnysound.wav" type="AudioStream" id=9]

[node name="music" type="Node"]
script = ExtResource( 1 )

[node name="gameSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="mouseClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="gameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="changeSceneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="startSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="eatSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="jelly_octorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="funnySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
